--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,29 +21,30 @@ dependencies = [
     "flask-cors==6.0.1",
     "flet==0.28.3",
     "flet-cli==0.28.3",
-    "flet-desktop==0.28.3",
+    "flet-permission-handler==0.1.0",
+    "flet-video==0.1.1",
     "flet-web==0.28.3",
     "h11==0.16.0",
     "httpcore==1.0.9",
-    "httptools==0.7.1",
+    # "httptools==0.6.1",
     "httpx==0.28.1",
     "idna==3.11",
     "importlib_metadata==8.7.0",
     "itsdangerous==2.2.0",
     "Jinja2==3.1.6",
     "markdown-it-py==3.0.0",
-    "MarkupSafe==3.0.3",
+    "MarkupSafe==2.1.5",
     "mdurl==0.1.2",
     "oauthlib==3.3.1",
     "packaging==25.0",
-    "pydantic==2.12.3",
+    "pydantic==2.33.2",
     "pydantic_core==2.41.4",
     "Pygments==2.19.2",
     "pypng==0.20220715.0",
     "python-dateutil==2.9.0.post0",
     "python-dotenv==1.1.1",
     "python-slugify==8.0.4",
-    "PyYAML==6.0.3",
+    "PyYAML==6.0.2",
     "qrcode==7.4.2",
     "repath==0.9.0",
     "requests==2.32.5",
@@ -82,10 +83,8 @@ permissions = [
     "foreground_service"
 ]
 
-[tool.flet.android]
-manifest_application = [
-    "android:requestLegacyExternalStorage=true"
-]
+[tool.flet.android.manifest_application]
+"android:requestLegacyExternalStorage" = "true"
 
 [tool.flet.assets]
 include = [
